# flight-price-notifier

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: test_duffel_api.py
