[tool.poetry]
name = "flight-price-notifier"
version = "0.1.0"
description = "Sends a whatsapp message when the flight price drops below a given threshold"
authors = ["Tom Prokop <thomas.prokop123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
twilio = "^8.11.0"
duffel-api = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
